test(MemberServiceTest): 테스트 수정
로직 위치 수정에 따른 기존 테스트 수정

related to: #220